kubernetes/apps/qbittorrent/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      securityContext:
        # sysctls:
        #   - name: net.ipv4.conf.all.src_valid_mark
        #     value: "1"
        #   - name: net.ipv6.conf.all.disable_ipv6
        #     value: "1"
      enableServiceLinks: true
      containers:
      - name: qbittorrent
        image: ghcr.io/hotio/qbittorrent:latest
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: "1"
            memory: 1Gi
        securityContext:
          privileged: false
          capabilities:
            add: ["NET_ADMIN"]
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: qbittorrent-data
          mountPath: /config
        - name: qbittorrent-downloads
          mountPath: /downloads
      volumes:
      - name: qbittorrent-data
        persistentVolumeClaim:
          claimName: qbittorrent-data
      - name: qbittorrent-downloads
        persistentVolumeClaim:
          claimName: qbittorrent-downloads
      - name: qbittorrent-wg0
        secret:
          secretName: qbittorrent
          items:
            - key: wg0.conf
              path: wg0.conf
