kubernetes/apps/qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
