kubernetes/apps/qbittorrent/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dl.${CLUSTER_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: qbittorrent
          port: 8080
  tls:
    secretName: efym-net-tls
